dsumaroka/spring-boot-intro-web (#2)
* renamed package

* renamed package, added BookDto.java, CreateBookRequestDto.java and BookController.java

* added method findById in BookController, BookRepositoryImpl, BookServiceImpl

* implemented methods findById in BookController, BookRepositoryImpl, BookServiceImpl

* check style and tests passed

* changed version maven-compiler-plugin from 3.8.1 to 3.13.0

* changed version maven-compiler-plugin from 3.8.1 to 3.13.0

* check style passed

* refactored pom.xml

* deleted some dependencies in pom.xml

* amended pom.xml: added <compilerArgs>
                                           <arg>--add-opens</arg>
                                           <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                                       </compilerArgs>

* amended pom.xml: use spring-boot-starter-parent version 3.3.4

* amended pom.xml: update lombok version to 1.18.34

* amended application.properties: added fail-on-unknown-properties=true

* after 1-st cod review: added catch block in method findById(Long id) in BookRepositoryImpl.java, refactored method findAll() in BookServiceImpl.java

* after 1-st cod review: created property <mapstruct.version>1.5.5.Final</mapstruct.version> in pom.xml, changed to ${mapstruct.version}

* after 2-nd cod review: renamed package to "exception", refactored pom.xml